--- a/public/style/app.css
+++ b/public/style/app.css
@@ -289,6 +289,7 @@ input:focus {
 }
 
 
+
 @media screen and (min-width: 375px) and (max-width: 667px) {
 
     .div_canter {
@@ -417,7 +418,7 @@ input:focus {
     } */
 
 
-    .box-buttons {
+    /* .box-buttons {
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -432,5 +433,30 @@ input:focus {
 
     .btn-search {
         width: 100%;
+    } */
+
+    h2{
+        font-size: 22px;
+        text-align: center;
+    }
+
+    #ag-30{
+        font-size: 4px !important;
+    }
+
+    .box-buttons-modals {
+        gap: 10px !important;
+        display: flex !important;
+        flex-wrap: wrap !important;
+        padding: 0 !important;
+    }
+    .box-inputs{
+        padding: 0 !important;
+        margin: 0 !important;
+    }
+    .button-modal{
+        padding: 0 !important;
+        margin-left: 0 !important;
+        margin-right: 0 !important;
     }
 }
